classDiagram
direction LR

class AcademicMember
class LoanableItem
class RestrictedItem
class Item
class Librarian

AcademicMember ..> LoanableItem : borrows
AcademicMember ..> Item : searches
Visitor ..> Item : searches

Professor ..> RestrictedItem : schedules visit

Librarian ..> AcademicMember : manages
Librarian ..> Item : registers
